Fix scrollbar in modal + Succes background color

--- a/bluebottle/common/static/sass/modules/_modal.scss
+++ b/bluebottle/common/static/sass/modules/_modal.scss
@@ -15,6 +15,7 @@ $modal-background-color									   : rgba(#8A9993, .65);
 	z-index: 999;
 	visibility: hidden;
 	@include perspective(1000);
+	overflow: auto;
 
 	&.is-active {
 		visibility: visible;
@@ -120,6 +121,7 @@ $modal-background-color									   : rgba(#8A9993, .65);
 	position: relative;
 	margin: 50px auto;
 	width: 350px;
+	padding-bottom: 100px;
 	//height: 100%;
 	@include perspective(800px);
 	@include opacity(0);
@@ -285,8 +287,7 @@ $modal-background-color									   : rgba(#8A9993, .65);
 				}
 
 				&.success {
-					
-					background: $color-primary;
+					background: $color-secondary;
 				}
 			}
 
